--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
         <div id="title">
             Judy Liu
         </div>
-        <div id="message">
-            Hi, my name is Judy Liu. I am a student at the University of California San Diego studying Computer Science.
-            <br>
-            I am interested in mobile development, machine learning and web development. <br>
-            This website showcases some of my projects and experiences. <br>
-            Source code for this website can be found on my
-            <a href="https://github.com/judyliu14/portfolio" target="_blank">Github</a>.
+        <div class="description">
+            <div id="headshot">
+                <img src="images/headshot.JPG" alt="headshot">
+            </div>
+            <div id="message">
+                Hi, my name is Judy Liu. I am a student at the University of California San Diego studying Computer
+                Science.
+                <br>
+                I am interested in mobile development, machine learning and web development. <br>
+                This website showcases some of my projects and experiences. <br>
+                Source code for this website can be found on my
+                <a href="https://github.com/judyliu14/portfolio" target="_blank">Github</a>.
+            </div>
         </div>
     </div>
 
